.. _dataclasses-release-notes:

Release Notes
=============

trunk
-----

Dec. 12, 2022 don la dieu (nega AT icecube.umd.edu)
---------------------------------------------------
IceTray Release v1.5.0

* Documentation cleanups
* Add __repr__ functions for I3ParticleID and I3ShowerBias
* Add the ability to calculate distribution variance to the SPEChargeDistribution for use in DOMLauncher
* Teach python how to call SPEChargeDistribution

Jul. 27, 2022 don la dieu (nega AT icecube.umd.edu)
---------------------------------------------------
IceTray Release v1.4.0

* Drop support for Python 2
* Clean up python bindings / modules
* Clean up warnings
* Fix buffer overlow
* Updates for C++17
* Add subsurface array updates
* Reflect relicensing agreements received from authors of core IceTray modules.
* Clean up documentation

Feb. 21, 2022 Tianlu Yuan
-------------------------
IceTray Release v1.3.0

* update test_I3DOMFunctions to actually test the new SPECharge distribution
* Compute the mean of the complete charge distribution. As this calculation can be more expensive than the analytic treatment, the result is computed lazily and cached. To aid this caching, some unnecessary copies of SPEChargeDistributions are eliminated. To speed up both the numerical integration and other uses of the charge distribution, the linear se
  arch in the tabulated residual values is replaced with a binary search.
* Add Enums for Gen2 sensors
* Avoid undefined behavior in bitshift
* Added 'GetTankGeo' functions to I3Geometry, to identify and access the StationGeo tanks correctly 
  regardless of their ordering in the list.
* Removed cached members of I3Position.  Non-cartesian coords are calculated on
  the fly.  A tradeoff of CPU for a reduced memory footprint, which we believe
  is worth it. (r179215)
* Implemented pybinding for I3Particle::Clone (r179198)
* Extended the `I3Geometry` class to include new members for scintillators and