@@ -87,7 +87,8 @@ namespace bp = boost::python;
   (IceActKey)(I3IceActGeo)(I3IceActRecoPulseSeries)                     \
   (I3IceActRecoPulseSeriesMap)                                          \
   (I3IceActWaveform)(I3IceActWaveformMap)(I3IceActPixelPositionMap)     \
-  (I3IceActTriggerMap)
+  (I3IceActTriggerMap)                                                  \
+  (I3IceTopSLCCalibration)(MapOMKeyI3IceTopSLCCalibration)(I3IceTopSLCCalibrationCollection)
 
 
 #define I3_REGISTRATION_FN_DECL(r, data, t) void BOOST_PP_CAT(register_,t)();
